force-app/main/default/objects/Payment__c/fields/Invoice_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount_Paid__c</fullName>
    <formula>Invoice__r.Paid_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>