force-app/main/default/objects/Payment__c/fields/Invoice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Due_Date__c</fullName>
    <formula>Invoice__r.Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Due Date</label>
    <type>Date</type>
</CustomField>