force-app/main/default/objects/Payment__c/fields/Invoice_Kind__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Kind__c</fullName>
    <formula>Invoice__r.KindOfBill__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Kind</label>
    <type>Text</type>
</CustomField>