force-app/main/default/objects/Payment__c/fields/Invoice_Outstanding_Balance__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Outstanding_Balance__c</fullName>
    <formula>Invoice__r.Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Outstanding Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>