force-app/main/default/objects/Payment__c/fields/Invoice_Team__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Team__c</fullName>
    <formula>TEXT(Invoice__r.Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Team</label>
    <type>Text</type>
</CustomField>