force-app/main/default/objects/Payment__c/fields/Invoice_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Total_Amount__c</fullName>
    <formula>Invoice__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>