force-app/main/default/objects/Payment__c/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <formula>IF(
				 NOT(ISBLANK(Invoice__c)),
				True,
				False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid</label>
    <type>Checkbox</type>
</CustomField>