force-app/main/default/objects/Payment__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <externalId>true</externalId>
    <label>Payment #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>