force-app/main/default/objects/Payment__c/fields/Practice_Area__c.field-meta.xml
<CustomField>
    <fullName>Practice_Area__c</fullName>
    <label>Practice Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Civil Litigation</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Criminal Law</fullName>
            </value>
            <value>
                <fullName>Defamation</fullName>
            </value>
            <value>
                <fullName>Employment Law</fullName>
            </value>
            <value>
                <fullName>Family Law</fullName>
            </value>
            <value>
                <fullName>Guardianship/Conservatorship</fullName>
            </value>
            <value>
                <fullName>HOA</fullName>
            </value>
            <value>
                <fullName>Landlord/Tenant Matters</fullName>
            </value>
            <value>
                <fullName>Personal Injury</fullName>
            </value>
            <value>
                <fullName>Probate and Estate Planning</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>