force-app/main/default/objects/Payment__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Mapped from the Source field of the Bank Transactions object in CLIO</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>