force-app/main/default/objects/Payment__c/fields/Trust__c.field-meta.xml
<CustomField>
    <fullName>Trust__c</fullName>
    <formula>CONTAINS(LOWER(Notes__c), &quot;trust&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trust</label>
    <type>Checkbox</type>
</CustomField>