force-app/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Matter__c</columns>
    <columns>Amount__c</columns>
    <columns>Fees__c</columns>
    <columns>Net_Amount__c</columns>
    <columns>Unapplied_Amount__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>